# trovex

./: .ctxignore  .ctxignore.example  .gitattributes  .gitignore  .mcp.json  .trovexignore  .trovexignore.example  README.md  REFONTE.md  SECURITY.md  context7.json  pyproject.toml  server.json  source.md
.agents/: product-marketing-context.md
.claude/: settings.json
.github/workflows/: announce-release.yml  brand.yml  core.yml  dep-audit.yml  publish-mcp.yml  security.yml  skill-gate.yml  web.yml
benchmarks/token-savings/: queries.txt  results-sample.json  run.py
deploy/: ctx-backup.service  ctx-backup.timer  ctx-reindex.service  ctx-reindex.timer  ctx.service  install.sh  serve-trovex.sh  traefik-ctx.yml  traefik-trovex.yml  trovex-backup.service  trovex-backup.timer  trovex-reindex.service  trovex-reindex.timer  trovex.service
deploy/hooks/: ctx-md-guard.sh  ctx-md-read-guard.sh  install-active-memory.sh  trovex-md-guard.sh  trovex-md-read-guard.sh  trovex-postcompact.sh  trovex-sessionend.sh
deploy/mcpb/: manifest.json
docs/: beta-welcome.md  faq.md  mcp-registry-submission.md  quickstart.md
growth/agency/: case-studies.md  design-direction.md  design-tokens.css  faq-and-about.md  naming.md  positioning-copy.md  service-pages.md  site-ia.md  suite-overview.md
growth/analytics/: ab-request-access-cta.md  activation-funnel.md  benchmarks-and-gsc-prep.md  beta-funnel-dashboard.md  blog-performance.md  blog-performance.mjs  consulting-funnel.md  experiment-backlog.md  experiments-batch-1.md  fireflies-to-twenty.mjs  geo-attribution.md  geo-citation-monitor.md  geo-citation-monitor.mjs  geo-deploy-verify.mjs  github-suite-reach.mjs  gsc-pull.mjs  launch-day-runbook.md  lead-scoring.md  north-star-report-template.md  north-star-scoreboard.mjs  plausible-snapshot.mjs  ranking-citation-tracking.md  retention-cohort-spec.md  ship-log-monitor.mjs  simap-tender-monitor.mjs  social-variant-readout.mjs  suite-agency-funnel-dashboard.md  suite-reach-measurement.md  tracking-plan.md  traffic-hygiene.md  twenty-lead-scorer.mjs  utm-convention.md  utm-launch-audit.md  verify-live-events.md  waitlist-funnel-report.md  waitlist-tracking.md  weekly-digest-runner.mjs  weekly-digest-template.md  weekly-readout.sh
growth/automation/: capture-pipe-healthcheck.mjs  catalog-regen.mjs  hand-raiser-heartbeat.mjs  hand-raiser-pipeline.mjs  indexnow-submit.mjs  lead-pipeline.mjs  release-watcher.mjs  secret-leak-rls-scan.mjs  stale-task-scanner.mjs  standup-bot.mjs  vercel-deploy-watcher.mjs
growth/blog/: how-we-measured-the-token-savings.md  local-first-vs-cloud-rag-for-agent-context.md  mcp-context-patterns-for-coding-agents.md  one-source-of-truth-for-a-fleet-of-agents.md  the-token-cost-of-agents-rereading-docs.md  token-economics-of-agent-fleets.md  trovex-is-in-private-beta.md  why-agents-pick-stale-docs.md  why-claude-md-stops-scaling.md  your-agents-dont-need-a-smarter-model.md
growth/content/: case-study-capture-template.md  comparison-copy-batch2.md  content-strategy.md  content-voice-guard.mjs  editorial-calendar-4wk.md  glossary.md  lead-magnet-token-audit.md
growth/cro/: beta-referral.md  consulting-page.md  deploy-trovex.sh  savings-methodology.md  savings-receipt.md  second-session-nudge.md  verify-surfaces.mjs  verify-surfaces.sh  waitlist-confirmation-email.md
growth/geo/: citation-attack-map.md
growth/launch/: README.md  beta-onboarding.md  beta-outreach.md  beta-reframe.md  beta-sequence.md  community-participation-playbook.md  community-plan.md  directory-packages-top5.md  directory-submissions.md  earned-media-targets.md  faq-bank.md  free-tool-brief.md  free-tool-directory-kit.md  free-tool-spec.md  launch-day-runbook.md  launch-teardown-playbook.md  launch-timeline.md  mcp-publish-runbook.md  mcp-registries.md  mcp-registry-kit.md  outreach.md  partnerships.md  press-onepager.md  product-hunt.md  proof-plan.md  public-launch-kit-deep.md  registry-variants.md  show-hn.md  suite-positioning.md  trovex-gallery-asset-spec.md  unfreeze-checklist.md  venue-final-posts.md  wraith-gallery-asset-spec.md  wraith-kit.md  wraith-mcp-registry-kit.md  wraith-registry-checklists.md  wraith-registry-packages.md
growth/method/: the-canonical-context-method.md
growth/ops/: README-dokan-liveness.md  com.tsukumo.dokan-liveness.plist  dokan-liveness.sh
growth/process/: analytics.md  brand-channel-direction.md  content.md  design.md  geo.md  launch.md
growth/social/: atom-mcp-patterns-linkedin.md  atom-stale-docs-x.md  atom-token-economics-x.md  beta-drivers-2.md  beta-drivers.md  bip-1-x.md  bip-2-linkedin.md  bip-3-x.md  blog-covers.json  bury-corrections.md  calendar.md  flagship-atom-linkedin.md  flagship-atom-x-thread.md  forum-seed-lobsters.md  forum-seed-posting-notes.md  forum-seed-reddit-chatgptcoding.md  forum-seed-reddit-localllama.md  launch-thread-x.md  linkedin-1-build-in-public.md  linkedin-2-lesson-agents-at-scale.md  linkedin-3-the-receipt.md  linkedin-ssot.md  reply-guide.md  savings-receipt-variants.md  x-comparison-claudemd.md
scripts/: brand_guard.py  security_guard.py
src/ctx/: __init__.py  backup.py  cache.py  cli.py  config.py  db.py  embedder.py  indexer.py  insights.py  markdown.py  mcp_app.py  measure.py  rerank.py  savings.py  search.py  server.py  state.py  status.py  store.py  usage.py
src/trovex/: __init__.py  backup.py  boot.py  (+27 more)
tests/: test_active_memory.py  test_benchmark.py  test_brand_guard.py  test_capture.py  test_chunking.py  test_cli_bench.py  test_config_worktree.py  test_db.py  test_distil.py  test_embedder_byo.py  test_embedder_default.py  test_eval_bench.py  test_eval_llm.py  test_markdown.py  test_mcp_contract.py  test_md_guard_hook.py  test_query_latency.py  test_retrieval_eval.py  test_security.py  test_security_guard.py  test_server.py  test_server_bind.py  test_server_json_sync.py  test_setup.py  test_store.py  test_update.py
web/: INTERNAL-LINKS.md  SEO-AUDIT.md  audit.html  eslint.config.js  index.html  package-lock.json  package.json  savings.html  tsconfig.api.json  vercel.json  vite.config.ts  vitest.config.ts
(+283 files in other folders)
