[project]
name = "ctx"
version = "0.9.0"
description = "Token-efficient routing for agent-generated .md docs. MCP + Web UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Synergix"}]
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "mcp>=1.2",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    "rich>=13.9",
    "python-multipart>=0.0.20",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[project.scripts]
ctx = "ctx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
