[project]
name = "trovex"
version = "0.11.1"
description = "Trovex — token-efficient routing for agent-generated .md docs. MCP + Web UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Synergix"}]
license = "AGPL-3.0-or-later"
keywords = ["mcp", "llm", "context", "coding-agents", "embeddings", "rag", "documentation", "token-efficiency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "mcp>=1.2",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    "rich>=13.9",
    "python-multipart>=0.0.20",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "openai>=1.50",
    "mistune>=3.0",
    "pygments>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[project.scripts]
trovex = "trovex.cli:app"

[project.urls]
Homepage = "https://trovex.dev"
Repository = "https://github.com/TsukumoHQ/trovex"
Issues = "https://github.com/TsukumoHQ/trovex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trovex"]

[tool.hatch.build.targets.sdist]
only-include = ["src/trovex"]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# E501 (long lines) is intentional. The codes below are TEMPORARY waivers for
# pre-existing debt that no CI ever enforced (there is no backend CI) — `ruff
# check` was red tree-wide on a fresh checkout. Parked here to restore a green
# trunk for the live fleet WITHOUT touching source in 9 active worktrees. They
# are to be removed (debt fixed) in the coordinated lint+format cleanup PR owned
# by cto — see relay 7b040d9c. Do not add to this list; fix new violations.
ignore = [
    "E501",
    "E702",  # multiple-statements-on-one-line (semicolon)
    "I001",  # unsorted-imports
    "N806",  # non-lowercase-variable-in-function
    "B008",  # function-call-in-default-argument
    "SIM105",  # suppressible-exception
    "UP017",  # datetime-timezone-utc
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF005",  # collection-literal-concatenation
    "RUF100",  # unused-noqa
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
