[project]
name = "trovex"
dynamic = ["version"]
description = "Trovex — token-efficient routing for agent-generated .md docs. MCP + Web UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "TsukumoHQ"}]
license = "AGPL-3.0-or-later"
keywords = ["mcp", "llm", "context", "coding-agents", "embeddings", "rag", "documentation", "token-efficiency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "mcp>=1.2",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.2",
    "typer>=0.13",
    "rich>=13.9",
    "python-multipart>=0.0.31",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "openai>=1.50",
    "mistune>=3.0",
    "pygments>=2.18",
    "slowapi>=0.1.10",
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

# Floors for vulnerable *transitive* deps (pulled by mcp[crypto]) so the
# pip-audit CI gate stays green. Constraints only bound versions already in the
# graph — they don't add new deps. Revisit when mcp bumps these itself.
[tool.uv]
constraint-dependencies = [
    "pyjwt>=2.13.0",        # PYSEC-2026-175..179
    "cryptography>=48.0.1", # GHSA-537c-gmf6-5ccf
    "pillow>=12.3.0",       # PYSEC-2026-2253..3454, CVE-2026-54058/59198/59200/59204
]

[project.scripts]
trovex = "trovex.cli:app"

[project.urls]
Homepage = "https://trovex.dev"
Repository = "https://github.com/TsukumoHQ/trovex"
Issues = "https://github.com/TsukumoHQ/trovex/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version comes from the git tag (single source of truth): a release = `git tag vX.Y.Z`.
# local_scheme=no-local-version → PyPI-valid dev versions; fallback_version covers a
# tag-less build env. server.json is synced to the tag at publish (see publish-mcp.yml).
[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version", fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/trovex"]
# Ship the non-Python data files (Claude Code skill + hooks) `trovex setup` installs.
artifacts = ["src/trovex/assets/**/*"]

[tool.hatch.build.targets.sdist]
only-include = ["src/trovex"]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# E501 (long lines) is intentional. The codes below are TEMPORARY waivers for
# pre-existing debt that no CI ever enforced (there is no backend CI) — `ruff
# check` was red tree-wide on a fresh checkout. Parked here to restore a green
# trunk for the live fleet WITHOUT touching source in 9 active worktrees. They
# are to be removed (debt fixed) in the coordinated lint+format cleanup PR owned
# by cto — see relay 7b040d9c. Do not add to this list; fix new violations.
ignore = [
    "E501",
    "E702",  # multiple-statements-on-one-line (semicolon)
    "I001",  # unsorted-imports
    "N806",  # non-lowercase-variable-in-function
    "B008",  # function-call-in-default-argument
    "SIM105",  # suppressible-exception
    "UP017",  # datetime-timezone-utc
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF005",  # collection-literal-concatenation
    "RUF100",  # unused-noqa
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
